--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
+    "antd": "^3.26.20",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
@@ -20,6 +23,9 @@
     "@vitejs/plugin-react": "^1.3.0",
     "eslint": "^8.22.0",
     "eslint-plugin-react": "^7.30.1",
+    "less": "^4.1.3",
+    "sass": "^1.54.5",
+    "stylus": "^0.59.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
     "vite-plugin-eslint": "^1.8.1"
